--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
+    "build": "webpack --config webpack.production.config.cjs",
+    "dev": "webpack serve --config webpack.dev.config.cjs --hot --open",
     "refresh": "rm -rf dist && npm run build"
   },
   "keywords": [],
@@ -27,6 +28,7 @@
     "sass-loader": "^16.0.6",
     "style-loader": "^4.0.0",
     "webpack": "^5.103.0",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   }
 }
