--- a/package.json
+++ b/package.json
@@ -1,34 +1,16 @@
 {
-  "name": "webpack",
+  "name": "tutorial",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a Readme file.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.production.config.cjs",
-    "dev": "webpack serve --config webpack.dev.config.cjs --hot --open",
-    "refresh": "rm -rf dist && npm run build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "devDependencies": {
-    "@babel/core": "^7.28.5",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.28.5",
-    "babel-loader": "^10.0.0",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^7.1.2",
-    "handlebars": "^4.7.8",
-    "handlebars-loader": "^1.7.3",
-    "html-webpack-plugin": "^5.6.5",
-    "mini-css-extract-plugin": "^2.9.4",
-    "sass": "^1.94.2",
-    "sass-loader": "^16.0.6",
-    "style-loader": "^4.0.0",
-    "webpack": "^5.103.0",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.2"
+  },
+  "dependencies": {
   }
 }
